--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "app for making birthday/christmas wishlists",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -15,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/Ryobia/gift-list/issues"
   },
-  "homepage": "https://github.com/Ryobia/gift-list#readme"
+  "homepage": "https://github.com/Ryobia/gift-list#readme",
+  "dependencies": {
+    "@apollo/client": "^3.6.4",
+    "graphql": "^16.5.0"
+  }
 }
