--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#3a81f5",
-  "background_color": "#3a81f5"
+  "theme_color": "#DADED4",
+  "background_color": "#DADED4"
 }
