--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql": "^16.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6"
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
